--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "My PWA App",
   "short_name": "PWA App",
-  "start_url": "https://github.com/Vasuxpareek24/Match-Finder-.git",
+  "start_url": "/Match-Finder-/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
